<resources>
    <string name="app_name">Kora</string>
    <string name="error_title">Error</string>
    <string name="dialog_progress_loading">KORA</string>
    <string name="dialog_retry_alert_title">Please try again later</string>
    <string name="dialog_retry_message">The internet connection appears to be offline.</string>
    <string name="dialog_retry_positive_btn">Retry</string>
    <string name="dialog_retry_negative_btn">Cancel</string>
    <string name="dialog_logout_title">Warning</string>
    <string name="dialog_logout_message">Are you sure you want to logout?</string>
    <string name="dialog_logout_positive_btn">Logout</string>
    <string name="dialog_logout_negative_btn">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_permission_get_phone_number_title">Info</string>
    <string name="dialog_permission_get_phone_number_message">Can not get phone number. Permission should be granted.</string>
    <string name="font_name_muli">Muli</string>
    <string name="font_name_muli_bold">MuliBold</string>
    <string name="font_name_muli_light">MuliLight</string>
    <string name="font_name_muli_regular">MuliRegular</string>
    <string name="font_name_muli_semi_bold">MuliSemiBold</string>
    <string name="registration_registration">Registration</string>
    <string name="registration_enter_phone_number">Please, enter your phone number and we will send you an SMS to verify your number</string>
    <string name="registration_phone_code">Phone code</string>
    <string name="registration_phone_number">Phone number</string>
    <string name="registration_phone_code_usa">+1</string>
    <string name="registration_phone_number_empty">Phone number filed is empty</string>
    <string name="registration_phone_number_incorrect">Phone number is incorrect</string>
    <string name="registration_send">SEND</string>
    <string name="registration_dialog_title_server_error_phone">Error</string>
    <string name="registration_dialog_message_server_error_phone">Phone number is already registered.</string>
    <string name="registration_dialog_title_twilio_error_phone">Error</string>
    <string name="registration_confirmation_code">Confirmation code</string>
    <string name="registration_enter_confirmation_code">Please, enter your confirmation code from SMS</string>
    <string name="registration_confirm">CONFIRM</string>
    <string name="registration_confirmation_code_empty">Confirmation code filed is empty</string>
    <string name="registration_confirmation_code_incorrect">Confirmation code is incorrect</string>
    <string name="registration_code_not_received">Didn\'t receive confirmation code?</string>
    <string name="registration_resend">RESEND</string>
    <string name="registration_dialog_title_server_error_code">Error</string>
    <string name="registration_dialog_message_server_error_code">Wrong confirmation code. Try to resend.</string>
    <string name="registration_create_pin_code">Create a PIN code</string>
    <string name="registration_confirm_pin_code">Please confirm a PIN code</string>
    <string name="registration_create_4_digit_pin_code">Create a 4-digit PIN that you will use when making transactions</string>
    <string name="registration_confirm_4_digit_pin_code">Confirm a 4-digit PIN that you will use when making transactions</string>
    <string name="registration_next">NEXT</string>
    <string name="registration_finish">FINISH</string>
    <string name="registration_pin_code_empty">Pin code fields are empty</string>
    <string name="registration_pin_code_too_short">Pin code is too short</string>
    <string name="registration_pin_code_does_not_match">Confirm pin code does not match to pin code</string>
    <string name="registration_creating_identity_wait">App is creating identity. Please wait for a while. Please do not exit the app.</string>
    <string name="registration_personal_info">Personal information</string>
    <string name="registration_enter_personal_info">Please, enter your personal information</string>
    <string name="registration_upload_photo">Upload Photo</string>
    <string name="registration_required">*</string>
    <string name="registration_user_name">User Name</string>
    <string name="registration_legal_name">Full Name</string>
    <string name="registration_email">Email</string>
    <string name="registration_date_of_birth">Date of Birth</string>
    <string name="registration_currency">Currency</string>
    <string name="registration_postal_code">Postal Code</string>
    <string name="registration_address">Address (Street, house, apartment)</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm Password</string>
    <string name="registration_user_name_empty">User name field is empty</string>
    <string name="registration_user_name_incorrect">User name is incorrect, only uppers case letters, lower case letters, numbers and \"_\" symbol, length at least 3 symbols</string>
    <string name="registration_user_name_too_short">User name is too short, at least 3 symbols</string>
    <string name="registration_full_name_incorrect">Full name is incorrect</string>
    <string name="registration_email_empty">Email field is empty</string>
    <string name="registration_email_incorrect">Email is incorrect</string>
    <string name="registration_date_of_birth_incorrect">You are too young, must be at least 18 years old</string>
    <string name="registration_currency_usa">"       USD"</string>
    <string name="registration_currency_different">"       %s"</string>
    <string name="registration_password_requirements">Requirements on password creation: minimal length 8 symbols, one upper case letter, one lower case letter, one number.</string>
    <string name="registration_password_empty">Password field is empty</string>
    <string name="registration_password_incorrect">Password is incorrect, at least one upper case letter, one lower case letter, one number, length at least 8 symbols</string>
    <string name="registration_password_too_short">Password is too short, at least 8 symbols</string>
    <string name="registration_confirm_password_empty">Confirm password field is empty</string>
    <string name="registration_confirm_password_incorrect">Confirm password does not match</string>
    <string name="registration_dialog_title_server_error_validation">Error</string>
    <string name="registration_dialog_title_back_pressed">Warning</string>
    <string name="registration_dialog_message_back_pressed">If you will return on previous screen, you will need to create identity again. It will take time. Are you sure you want to go back?</string>
    <string name="registration_dialog_positive_back_pressed">Return</string>
    <string name="registration_dialog_negative_back_pressed">Cancel</string>
    <string name="registration_dialog_message_verification_dode_was_sent">SMS message with verification code was sent</string>
    <string name="registration_increase_account_wait">Kora is sending money on your new account. Please wait for a while. Please do not exit the app.</string>
    <string name="registration_select_country">Select country</string>
    <string name="registration_enter_country">Enter country</string>
    <string name="registration_brackets" formatted="false">" (%s)"</string>
    <string name="registration_select_currecny">Select currency</string>
    <string name="registration_enter_currency">Enter currency</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_login">Log in</string>
    <string name="login_enter_identifier">Please, enter your\nPhone number / User name / Email</string>
    <string name="login_identifier">Phone number / User name / Email</string>
    <string name="login_password">Password</string>
    <string name="login_log_in">LOG IN</string>
    <string name="login_no_account">Don’t have an account?</string>
    <string name="login_registration">Register</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_restore">Restore</string>
    <string name="login_identifier_empty">Identifier field is empty</string>
    <string name="login_identifier_incorrect">Identifier is incorrect</string>
    <string name="login_identifier_too_short">Identifier is too short</string>
    <string name="login_password_empty">Password field is empty</string>
    <string name="login_password_too_short">Password is too short</string>
    <string name="login_dialog_title_server_error">Error</string>
    <string name="login_dialog_message_server_error">Wrong identifier or password</string>
    <string name="home_info_tesnet">These are test tokens on a Rinkeby Testnet. It is not a Mainnet yet.</string>
    <string name="home_info_email">In order to use full version of the application, you need to check your email and click on the link that we\'ve sent you. If you have already done this, please click this button.</string>
    <string name="home_email_confirmed">Email confirmed</string>
    <string name="home_balance">Balance</string>
    <string name="home_deposit">DEPOSIT</string>
    <string name="home_withdraw">WITHDRAW</string>
    <string name="home_my_apps">My Apps</string>
    <string name="home_agent">Agent</string>
    <string name="home_merchant">Merchant</string>
    <string name="home_lending">Lending</string>
    <string name="home_cooperative">Cooperative</string>
    <string name="home_transactions">Transactions</string>
    <string name="home_show_all_transactions">SHOW ALL TRANSACTIONS</string>
    <string name="menu_home">Home</string>
    <string name="menu_send_money">Send Money</string>
    <string name="requests_money">Request Money</string>
    <string name="menu_borrow_money">Borrow Money</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_withdrawal">Withdraw</string>
    <string name="menu_transactions_history">Transactions History</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_sand_a_feedback">Send Feedback</string>
    <string name="transaction_filter_show_label">Show:</string>
    <string name="transaction_filter_show_all_label">Show All</string>
    <string name="transaction_filter_show_incoming_label">Incoming</string>
    <string name="transaction_filter_show_upcoming_label">Upcoming</string>
    <string name="transaction_filter_type_label">Type:</string>
    <string name="transaction_filter_type_sent_label">Sent</string>
    <string name="transaction_filter_type_requested_label">Requested</string>
    <string name="transaction_filter_type_borrowed_funded_label">Borrowed (funded)</string>
    <string name="transaction_filter_type_borrowed_paid_back_label">Borrowed (paid back)</string>
    <string name="transaction_filter_type_deposit_label">Deposit</string>
    <string name="transaction_filter_type_withdraw_label">Withdraw</string>
    <string name="transaction_filter_state_label">State:</string>
    <string name="transaction_filter_state_pending_label">Pending</string>
    <string name="transaction_filter_state_success_label">Finished</string>
    <string name="transaction_filter_state_error_label">Error</string>
    <string name="transaction_filter_cancel_label">Cancel</string>
    <string name="transaction_filter_done_label">Done</string>
    <string name="dialog_return_title">Return</string>
    <string name="dialog_return_text" formatted="false">Enter amount, part or full. Your loan balance is %.2f %s.</string>
    <string name="dialog_return_edit_hint">Amount</string>
    <string name="dialog_return_negative">Cancel</string>
    <string name="dialog_return_positive">OK</string>
    <string name="deposit_filter_state">State:</string>
    <string name="deposit_filter_show_all">Show all</string>
    <string name="deposit_filter_in_progress">In progress</string>
    <string name="deposit_filter_rejected">Rejected</string>
</resources>