<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@android:drawable/ic_menu_agenda"/>

        <item
            android:id="@+id/nav_send_money"
            android:title="@string/menu_send_money"
            android:icon="@android:drawable/ic_menu_send"/>

        <item
            android:id="@+id/nav_requests_money"
            android:title="@string/requests_money"
            android:icon="@android:drawable/ic_menu_revert"/>

        <item
            android:id="@+id/nav_borrow_money"
            android:title="@string/menu_borrow_money"
            android:icon="@android:drawable/ic_menu_directions"/>

        <item
            android:id="@+id/nav_deposit"
            android:title="@string/menu_deposit"
            android:icon="@android:drawable/ic_menu_directions"/>

        <item
            android:id="@+id/nav_withdrawal"
            android:title="@string/menu_withdrawal"
            android:icon="@android:drawable/ic_menu_directions"/>

        <item
            android:id="@+id/nav_transactions_history"
            android:title="@string/menu_transactions_history"
            android:icon="@android:drawable/ic_menu_directions"/>

        <item
            android:id="@+id/nav_user_profile"
            android:title="@string/menu_user_profile"
            android:icon="@android:drawable/ic_menu_directions"/>

        <item
            android:id="@+id/nav_send_a_feedback"
            android:title="@string/menu_sand_a_feedback"
            android:icon="@android:drawable/ic_menu_directions"/>

    </group>
</menu>