<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="9dp"
                android:paddingTop="16dp"
                android:text="@string/transaction_filter_show_label"
                android:textColor="#3b3d3d"
                android:textSize="16sp"
                app:fontFamily="@font/muli_bold" />

            <RadioGroup
                android:id="@+id/show_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/show_all_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:button="@null"
                    android:drawableRight="@drawable/btn_radio"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/transaction_filter_show_all_label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#14000000" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/show_incoming_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:button="@null"
                    android:drawableRight="@drawable/btn_radio"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/transaction_filter_show_incoming_label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#14000000" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/show_upcoming_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:button="@null"
                    android:drawableRight="@drawable/btn_radio"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/transaction_filter_show_upcoming_label" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="9dp"
                android:paddingTop="16dp"
                android:text="@string/transaction_filter_type_label"
                android:textColor="#3b3d3d"
                android:textSize="16sp"
                app:fontFamily="@font/muli_bold" />


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/type_sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_type_sent_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/type_requesed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_type_requested_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/type_borrowed_funded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_type_borrowed_funded_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/type_borrowed_paid_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_type_borrowed_paid_back_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/type_deposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_type_deposit_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/type_withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_type_withdraw_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="9dp"
                android:paddingTop="16dp"
                android:text="@string/transaction_filter_state_label"
                android:textColor="#3b3d3d"
                android:textSize="16sp"
                app:fontFamily="@font/muli_bold" />


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/state_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_state_success_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/state_pending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_state_pending_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/state_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/btn_checkbox"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/transaction_filter_state_error_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#14000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/button_cancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_filter_cancel_label"
                    android:textColor="#e62f60"
                    android:textSize="16sp"
                    app:fontFamily="@font/muli_bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/button_done"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_filter_done_label"
                    android:textColor="@color/color_violet_text"
                    android:textSize="16sp"
                    app:fontFamily="@font/muli_bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>