<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="9dp"
        android:paddingTop="16dp"
        android:text="@string/deposit_filter_state"
        android:textColor="#3b3d3d"
        android:textSize="16sp"
        app:fontFamily="@font/muli_bold" />

    <RadioGroup
        android:id="@+id/radio_group_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_button_show_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableEnd="@drawable/btn_radio"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/deposit_filter_show_all" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#14000000" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_button_in_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableEnd="@drawable/btn_radio"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/deposit_filter_in_progress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#14000000" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_button_rejected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableEnd="@drawable/btn_radio"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/deposit_filter_rejected" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#14000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_filter_cancel_label"
            android:textColor="#e62f60"
            android:textSize="16sp"
            app:fontFamily="@font/muli_bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_done"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_filter_done_label"
            android:textColor="#46a6e3"
            android:textSize="16sp"
            app:fontFamily="@font/muli_bold" />

    </LinearLayout>

</LinearLayout>