<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_semi_bold"
        android:text="@string/dialog_return_title"
        android:textColor="@color/color_dialog_title"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/muli_normal"
        android:text="@string/dialog_return_text"
        android:textColor="@color/color_dialog_text"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_layout_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="muli_regular"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="muli_regular"
            android:hint="@string/dialog_return_edit_hint"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/color_edit_text"
            android:textSize="16sp"
            tools:text="750" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_negative"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/muli_bold"
            android:text="@string/dialog_return_negative"
            android:textColor="@color/color_dialog_button_text"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_positive"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/muli_bold"
            android:text="@string/dialog_return_positive"
            android:textColor="@color/color_dialog_button_text"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>